--- a/Back_On_Rails/app/views/item_reviews/new.html.erb
+++ b/Back_On_Rails/app/views/item_reviews/new.html.erb
@@ -1,17 +1,6 @@
 <h1>Write a Review</h1>
 
-<% if @item_review.errors.any? %>
-    <div class="error_messages">
-        <h2>Form is invalid</h2>
-        <ul>
-            <% @item_review.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-        </ul>
-    </div>
-<% end %>
-
-
+<%= render 'error_messages' %>
 
 <%= form_for(:item_review, url: item_item_reviews_path(@item), method: :post) do |form| %>
     <% options = [1, 2, 3, 4, 5] %>
