added item average review score functionality to item model. Added this avg rating to some views

--- a/Back_On_Rails/app/views/item_reviews/index.html.erb
+++ b/Back_On_Rails/app/views/item_reviews/index.html.erb
@@ -3,7 +3,7 @@
 			<div class="col-sm-3">
 				<div class="rating-block">
 					<h4><%= @item.name%> Reviews</h4>
-					<h2 class="bold padding-bottom-7">4.3 <small>/ 5</small></h2>
+					<h2 class="bold padding-bottom-7"><%= @item.get_average_rating %><small>/ 5</small></h2>
 					<button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
 					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
 					</button>
