--- a/Back_On_Rails/app/views/items/show.html.erb
+++ b/Back_On_Rails/app/views/items/show.html.erb
@@ -15,6 +15,7 @@
 
 
 </body><br/><br/>
+<div>Average Rating: <%= @item.get_average_rating %>/5</div>
 <%= link_to 'View Item Reviews', item_item_reviews_path(@item) %></br>
 
 <%= link_to 'back to items', items_path %></br>
