--- a/Back_On_Rails/app/views/item_reviews/index.html.erb
+++ b/Back_On_Rails/app/views/item_reviews/index.html.erb
@@ -3,81 +3,38 @@
 			<div class="col-sm-3">
 				<div class="rating-block">
 					<h4><%= @item.name%> Reviews</h4>
-					<h2 class="bold padding-bottom-7"><%= @item.get_average_rating %><small>/ 5</small></h2>
-					<button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
-					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-					</button>
-					<button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
-					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-					</button>
-					<button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
-					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-					</button>
-					<button type="button" class="btn btn-default btn-grey btn-sm" aria-label="Left Align">
-					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-					</button>
-					<button type="button" class="btn btn-default btn-grey btn-sm" aria-label="Left Align">
-					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-					</button>
+					<h2 class="bold padding-bottom-7"><%= sprintf('%.2f', @item.get_average_rating) %><small>/ 5</small></h2>
+                    <% for i in 1..5 %>
+                        <% if i<= (@item.get_average_rating*10).round/10.0 %>
+                            <button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
+        					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+        					</button>
+                        <% else %>
+                            <button type="button" class="btn btn-default btn-grey btn-sm" aria-label="Left Align">
+        					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+        					</button>
+                        <% end %>
+                    <% end %>
 				</div>
 			</div>
 			<div class="col-sm-3">
 				<h4>Rating breakdown</h4>
-				<div class="pull-left">
-					<div class="pull-left" style="width:35px; line-height:1;">
-						<div style="height:9px; margin:5px 0;">5 <span class="glyphicon glyphicon-star"></span></div>
-					</div>
-					<div class="pull-left" style="width:180px;">
-						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="5" style="width: 1000%"></div>
-						</div>
-					</div>
-					<div class="pull-right" style="margin-left:10px;">1</div>
-				</div>
-				<div class="pull-left">
-					<div class="pull-left" style="width:35px; line-height:1;">
-						<div style="height:9px; margin:5px 0;">4 <span class="glyphicon glyphicon-star"></span></div>
-					</div>
-					<div class="pull-left" style="width:180px;">
-						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="4" aria-valuemin="0" aria-valuemax="5" style="width: 80%"></div>
-						</div>
-					</div>
-					<div class="pull-right" style="margin-left:10px;">1</div>
-				</div>
-				<div class="pull-left">
-					<div class="pull-left" style="width:35px; line-height:1;">
-						<div style="height:9px; margin:5px 0;">3 <span class="glyphicon glyphicon-star"></span></div>
-					</div>
-					<div class="pull-left" style="width:180px;">
-						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="3" aria-valuemin="0" aria-valuemax="5" style="width: 60%"></div>
-						</div>
-					</div>
-					<div class="pull-right" style="margin-left:10px;">0</div>
-				</div>
-				<div class="pull-left">
-					<div class="pull-left" style="width:35px; line-height:1;">
-						<div style="height:9px; margin:5px 0;">2 <span class="glyphicon glyphicon-star"></span></div>
-					</div>
-					<div class="pull-left" style="width:180px;">
-						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="5" style="width: 40%"></div>
-						</div>
-					</div>
-					<div class="pull-right" style="margin-left:10px;">0</div>
-				</div>
-				<div class="pull-left">
-					<div class="pull-left" style="width:35px; line-height:1;">
-						<div style="height:9px; margin:5px 0;">1 <span class="glyphicon glyphicon-star"></span></div>
-					</div>
-					<div class="pull-left" style="width:180px;">
-						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="5" style="width: 20%"></div>
-						</div>
-					</div>
-					<div class="pull-right" style="margin-left:10px;">0</div>
-				</div>
+
+                <% for i in (5).downto(1)%>
+    				<div class="pull-left">
+    					<div class="pull-left" style="width:35px; line-height:1;">
+    						<div style="height:9px; margin:5px 0;"><%=i%> <span class="glyphicon glyphicon-star"></span></div>
+    					</div>
+    					<div class="pull-left" style="width:180px;">
+    						<div class="progress" style="height:9px; margin:8px 0;">
+                              <% rating_ratio = 100 * @item.get_rating_breakdown[i] / (@item.get_rating_breakdown[1] + @item.get_rating_breakdown[2] + @item.get_rating_breakdown[3] + @item.get_rating_breakdown[4] + @item.get_rating_breakdown[5])%>
+                              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="5" style="width: <%= rating_ratio %>%"></div>
+    						</div>
+    					</div>
+    					<div class="pull-right" style="margin-left:10px;"><%= @item.get_rating_breakdown[i] %></div>
+    				</div>
+                <% end %>
+
 			</div>
 		</div>
 
