modified ui buttons in transactions pages

--- a/Back_On_Rails/app/assets/stylesheets/reviews.scss
+++ b/Back_On_Rails/app/assets/stylesheets/reviews.scss
@@ -71,4 +71,5 @@
     width: 16px;
     height: 16px;
     background: url('star.png') 0 -16px;
+    background: url('https://www.everythingfrontend.com/samples/star-rating/star.png') 0 -16px;
 }
