fixed bug with notifications menu

--- a/Back_On_Rails/app/views/notifications/_transaction.html.erb
+++ b/Back_On_Rails/app/views/notifications/_transaction.html.erb
@@ -1,15 +1,24 @@
 <div class="media-heading">
-    <% if notification.tag == 'request' %>
+    <% if notification.actor && notification.user && notification.target %>
+
         <%= link_to notification.actor.username, main_app.user_path(notification.actor) %>
-        has requested to borrow your item:
-        <%= link_to notification.second_target.name, main_app.item_path(notification.second_target) %>
-    <% elsif notification.tag == 'update' %>
-        <%= link_to notification.actor.username, main_app.user_path(notification.actor) %>
-        <% if notification.target.isApproved == 1 %>
+
+        <% if notification.tag == 'request' %>
+            has requested to borrow your item:
+        <% elsif notification.tag == 'accept' %>
             has accepted your request to borrow their item:
-        <% elsif notification.target.isApproved == 2 %>
+        <% elsif notification.tag == 'reject' %>
             has rejected your request to borrow their item:
+        <% elsif notification.tag == 'item_returned' %>
+            has recieved <%= link_to notification.target.name, main_app.item_path(notification.target) %> back from you
+        <% elsif notification.tag == 'lender_cancel' %>
+            has cancelled the agreement to let you borrow
+        <% elsif notification.tag == 'borrower_cancel' %>
+            has cancelled the plans to borrow
         <% end %>
-        <%= link_to notification.second_target.name, main_app.item_path(notification.second_target) %>
+
+        <% if notification.tag != 'item_returned' %>
+            <%= link_to notification.target.name, main_app.item_path(notification.target) %>
+        <% end %>
     <% end %>
 </div>
