--- a/Back_On_Rails/app/views/transactions/borrow_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/borrow_index.html.erb
@@ -46,7 +46,7 @@
 							<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
 				            <td><%= transaction.start_date%></td>
 				            <td><%= transaction.end_date%></td>
-							<% params = {redirect: borrow_transactions_path} %>
+							<% params = {redirect: borrow_transactions_path, type: 'borrower_cancel'} %>
 							<td><%= link_to transaction_path(transaction, transaction: params), method: :delete, data: {confirm: "Are you sure you want to cancel this upcoming transaction?"},
 								'data-toggle': 'tooltip', title: 'Cancel this transaction', 'data-placement': 'right',
 								class: "btn btn-danger" do %>
