--- a/Back_On_Rails/app/views/layouts/_navigation.html.erb
+++ b/Back_On_Rails/app/views/layouts/_navigation.html.erb
@@ -63,7 +63,17 @@
 
 				<li>
 					<% if session[:user_id] == nil %>
-						<%= link_to 'Log in', main_app.login_path %>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Get Started!<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li align = "center"><%= link_to 'Login With Email', main_app.login_path %></li>
+                <li role="separator" class="divider"></li>
+                <li align = "center"><%= link_to 'Sign Up With Email', main_app.new_user_path %></li>
+                <li role="separator" class="divider"></li>
+								<li align = "center"><%= link_to "Using Facebook", user_facebook_omniauth_authorize_path %></li>
+							</ul>
+						</li>
+						
 					<% else %>
 
 					<% end %>
@@ -73,25 +83,22 @@
 				<% if request.fullpath == "/users/new" %>
 
 				<% elsif session[:user_id] == nil%>
-					<%= link_to 'Sign Up', main_app.new_user_path %>
+					
 				<% else %>
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" font-weight= "bold" id = "line">
 						Welcome! <%= current_user.username %><span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><%= link_to 'My Page', main_app.user_path(session[:user_id]) %></li>
+							<li align = "center"><%= link_to 'My Page', main_app.user_path(session[:user_id]) %></li>
 							<li role="separator" class="divider"></li>
-							<li><%= link_to current_user.friends.count.to_s + ' Following', main_app.my_friends_path %></li>
+							<li align = "center"><%= link_to current_user.friends.count.to_s + ' Following', main_app.my_friends_path %></li>
 							<li role="separator" class="divider"></li>
-							<li><%= link_to 'Log out', main_app.logout_path, method: :delete %></li>
+							<li align = "center"><%= link_to 'Log out', main_app.logout_path, method: :delete %></li>
 						</ul>
 					</li>
 				<% end %>
 				</li>
-
-
-
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
